# elephant-reasoner

./: .gitignore  Makefile.am  README  TODO  configure.ac  index.html  params.json
src/: Makefile.am  elephant-reasoner.c
src/hashing/: Makefile.am  dynamic_hash_map.c  dynamic_hash_map.h  dynamic_hash_table.c  dynamic_hash_table.h  dynamic_hash_table_64.c  dynamic_hash_table_64.h  hash_map.c  hash_map.h  hash_map_64.c  hash_map_64.h  hash_table.c  hash_table.h  key_hash_table.c  key_hash_table.h  key_value_hash_table.c  key_value_hash_table.h  murmur3.c  murmur3.h  utils.c  utils.h
src/hierarchy/: Makefile.am  hierarchy.c  hierarchy.h  utils.c  utils.h
src/index/: index.c  index.h  utils.c  utils.h
src/index/abox/: Makefile.am  index.c  index.h
src/index/tbox/: index.c  index.h  utils.c
src/model/: Makefile.am  datatypes.h  limits.h  memory_utils.c  memory_utils.h  model.c  model.h  print_utils.c  print_utils.h  utils.c  utils.h
src/model/abox/: Makefile.am  datatypes.h  memory_utils.c  model.c  model.h
src/model/tbox/: model.c  model.h  utils.h
src/parser/: Makefile.am  datatypes.h  owl2fsLexer.l  owl2fsParser.y  y.tab.h
src/preprocessing/: Makefile.am  datatypes.h  preprocessing.c  preprocessing.h  utils.c  utils.h
src/reasoner/: Makefile.am  reasoner.c  reasoner.h
src/saturation/: Makefile.am  concept_saturation.c  concept_saturation.h  context.h  datatypes.h  role_saturation.c  role_saturation.h  saturation.c  saturation.h  saturation_worker.c  saturation_worker.h  utils.c  utils.h
src/test/: Makefile.am  test_hash_map.c  test_hash_map_performance.c  test_hash_string.c  test_hash_table.c  test_hash_table_performance.c  test_linked_list.c  test_list.c  test_map.c  test_map_performance.c  test_set.c  test_size.c  test_stack.c  test_stack_fixed_size.c  test_struct_2_dim_array.c  test_struct_array.c  test_ts_stack.c
src/test/ontologies/: bottom-concept-1.owl  bottom-concept.owl  consistency1.owl  different-individuals-0.owl  disjoint-classes.owl  equivalent-objectproperties.owl  role_composition_hierarchy-3.owl  same-individual-0.owl  same-individual-2.owl  test_consistency-0.owl  test_consistency-2.owl  test_objectproperty_domain-0.owl  test_objectproperty_domain-1.owl  test_role_composition-0.owl  test_role_composition-1.owl  test_role_composition-10.owl  test_role_composition-11.owl  test_role_composition-12.owl  test_role_composition-13.owl  test_role_composition-14.owl  test_role_composition-2.owl  test_role_composition-3.owl  test_role_composition-4.owl  test_role_composition-5.owl  test_role_composition-6.owl  test_role_composition-7.owl  test_role_composition-8.owl  test_role_composition-9.owl  test_role_hierarchy-0.owl  test_role_hierarchy-1.owl  test_top_concept-1.owl  transitive-role.owl  transitive_role-0.owl  transitive_role-1.owl
src/utils/: Makefile.am  linked_list.c  linked_list.h  list.c  list.h  list_64.c  list_64.h  map.h  queue.c  queue.h  set.h  stack.c  stack.h  stack_fixed_size.c  stack_fixed_size.h  timer.h  ts_stack.c  ts_stack.h
trunk/: Makefile.am  README  TODO  configure.ac
trunk/src/: Makefile.am  elephant-reasoner.c
trunk/src/hashing/: Makefile.am  hash_map.c  hash_map.h  hash_table.c  hash_table.h  key_hash_table.c  key_hash_table.h  key_value_hash_table.c  key_value_hash_table.h  utils.c  utils.h
trunk/src/hierarchy/: hierarchy.c  hierarchy.h  utils.c  utils.h
trunk/src/index/: Makefile.am  index.c  index.h  utils.c  utils.h
trunk/src/index/tbox/: Makefile.am  index.c  index.h  utils.h
trunk/src/model/: Makefile.am  datatypes.h  initialization.c  limits.h  memory_utils.c  memory_utils.h  model.c  model.h  print_utils.c  print_utils.h  utils.c  utils.h
trunk/src/model/abox/: Makefile.am  datatypes.h  memory_utils.c  memory_utils.h  model.h  utils.h
trunk/src/model/tbox/: Makefile.am  Makefile.in  datatypes.h  memory_utils.c  memory_utils.h  utils.c
trunk/src/parser/: Makefile.am  datatypes.h  owl2fsLexer.c  owl2fsLexer.l  owl2fsParser.c  owl2fsParser.y  y.tab.h
trunk/src/preprocessing/: Makefile.am  preprocessing.c  preprocessing.h  utils.c  utils.h
trunk/src/reasoner/: reasoner.c  reasoner.h
trunk/src/saturation/: concept_saturation.c  concept_saturation.h  context.c  datatypes.h  locals.h  role_saturation.c  role_saturation.h  saturation.c  saturation.h  utils.c  utils.h
trunk/src/test/: Makefile.am  test_hash_map_performance.c  test_hash_table.c  test_hash_table_performance.c
trunk/src/test/ontologies/: bottom-concept-1.owl  consistency2.owl  equivalent-concepts.owl  individuals-1.owl  role_composition_hierarchy-1.owl  role_composition_hierarchy-2.owl
trunk/src/utils/: Makefile.am  list.c  list.h  queue.c  queue.h  set.h  stack.c
