AUTOMAKE_OPTIONS = foreign
SUBDIRS          = src/model src/model/tbox src/model/abox src/parser src/index src/saturation src/hierarchy src/utils src/reasoner src/hashing src/preprocessing \
	src/test src/index/tbox src/index/abox src 
DISTCLEANFILES   = config.log config.status Makefile libtool make.out
